# signature-property-solutions

./: .env  .env.example  .gitignore  CHAT-UI-PLAN.md  DEPLOYMENT.md  Database-Structure-v2.xlsx  README.md  Report.md  database-structure.md  db.sqlite3  dump.json  fixture.json  passenger_wsgi.py  pyproject.toml  requirements.txt  setup.md  signature-property-solutions-admin-final.html
admin-frontend/: next.config.mjs  package-lock.json  package.json  vitest.config.ts
deploy/: README.md
deploy/env/: admin.env.example  django.env.example
deploy/nginx/: admin-http-bootstrap.conf  admin.signaturepropertysolutions.com.conf  http-bootstrap.conf  signaturepropertysolutions.com.conf
deploy/runtime/: rollback-compatible-v1  sps_auth.py  sps_settings.py
deploy/scripts/: common.sh  sps-backup  sps-deploy  sps-rollback  sps-verify
deploy/systemd/: sps-admin.service  sps-django.service
docs/: admin-frontend-plan.md  pythonanywhere-deployment.md
docs/plans/: 2026-03-16-currency-filter-design.md  2026-03-16-db-driven-max-price-design.md  2026-03-16-hero-search-filter-design.md  2026-03-16-homepage-resemblance-design.md  (+1 more)
signature/: cors.py  middleware.py  request_state.py  settings.py  urls.py
signature/api/: serializers.py  (+7 more)
signatureapp/: admin.py  apps.py  models.py  search.py  signals.py  tests.py  views.py
template/: 404.html  about.html  apartment-single.html  contact.html  filtered_properties.html  index.html  llms.txt  properteas.html  properteas_cards.html  properties.html  properties_cards.html  robots.txt  service.html  servicedt.html  testimonials.html
(+168 files in other folders)
