[project]
name = "signature-property-solutions"
version = "0.1.0"
description = "Signature Property Solutions - Real Estate Website"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0.4,<5.1",
    "django-ckeditor>=6.7.1,<7",
    "django-multiselectfield>=0.1.12,<1",
    "pillow>=10.3.0,<11",
]


