[project]
name = "signature-property-solutions"
version = "0.1.0"
description = "Signature Property Solutions - Real Estate Website"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2.16,<5.3",
    "django-ckeditor>=6.7.1,<7",
    "django-cors-headers>=4.3.1,<5",
    "django-jazzmin>=3.0.1,<4",
    "django-multiselectfield>=0.1.12,<1",
    "djangorestframework>=3.15.1,<4",
    "djangorestframework-simplejwt>=5.3.1,<6",
    "gunicorn>=23.0.0,<24",
    "pillow>=11.3.0,<12",
    "python-dotenv>=1.0.1,<2",
]

